Added sources for NumbeRun v2.1

--- a/NumbeRun v2.1 - sources/NumbeRun with XNA/NumbeRun.csproj
+++ b/NumbeRun v2.1 - sources/NumbeRun with XNA/NumbeRun.csproj
@@ -18,6 +18,7 @@
     <ManifestKeyFile>NumbeRun_TemporaryKey.pfx</ManifestKeyFile>
     <GenerateManifests>true</GenerateManifests>
     <SignManifests>true</SignManifests>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -28,8 +29,13 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <SupportUrl>https://marcomontalbano.com/portfolio/2/numberun</SupportUrl>
+    <TargetCulture>it-IT</TargetCulture>
+    <ProductName>NumbeRun</ProductName>
+    <PublisherName>Marco Montalbano</PublisherName>
+    <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationVersion>2.1.0.%2a</ApplicationVersion>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
